third_party/lw_abi/lw_c_api.h

/* Opaque handle to a peer-connection factory. */
typedef struct lw_factory lw_factory_t;
/* ---- Lifecycle -------------------------------------------------------- */

/* Returns the ABI version the loaded library was built against. A caller
 * compares this to its own LW_ABI_VERSION at load time. */
LW_C_API int lw_abi_version(void);
/* Global init/teardown. lw_initialize returns nonzero on success and must be
 * called once before creating a factory; lw_terminate is called after all
 * handles have been released. Both are thread-safe. */
LW_C_API int lw_initialize(void);
LW_C_API void lw_terminate(void);
/* ---- Factory ---------------------------------------------------------- */

/* Creates a peer-connection factory. Returns NULL on failure; the handle owns
 * one reference (retire it with lw_release). Call lw_factory_initialize before
 * using it. */
LW_C_API lw_factory_t* lw_factory_create(void);
/* Initializes a factory. Returns nonzero on success. */
LW_C_API int lw_factory_initialize(lw_factory_t* factory);
/* ---- Handle reference counting ---------------------------------------- */

/* Retain/release any lw_* handle (all map to the shared RefCountInterface).
 * One pair covers every handle type. Null handles are ignored. Handles may be
 * released in any order: each keeps the factory it came from alive. */
LW_C_API void lw_retain(void* handle);
LW_C_API void lw_release(void* handle);
/* ---- Callback string payloads ----------------------------------------- */

/* Frees a payload delivered to a callback below. Every `char*` a callback
 * receives is owned by the callback, which passes it here once done. NULL is
 * ignored.
 *
 * Data channel messages come this way too. They are length-delimited, since a
 * binary message may contain zero bytes, but a NUL is appended past the length
 * so a text message can also be read as a C string. */
LW_C_API void lw_string_free(char* s);
/* ---- Video sink registry ---------------------------------------------- */

/* Opaque handle to a video track, produced by the control-plane shim. */
typedef struct lw_video_track lw_video_track_t;
/* Unguessable, nonzero handle to a registered video sink. 0 is invalid. */
typedef uint64_t lw_video_sink_token;
/* Registers a native video sink. `sink` and `user` are caller-owned and MUST
 * outlive the binding (they are referenced, not copied). Returns an
 * unguessable token, or 0 on failure (null/invalid sink). */
LW_C_API lw_video_sink_token lw_video_sink_register(const LwVideoSinkV1* sink,
                                                    void* user);
/* Unregisters a sink token. Returns 0 on success, negative if unknown. Does
 * not unbind: unbind the track first (lw_video_track_unbind_sink). */
LW_C_API int lw_video_sink_unregister(lw_video_sink_token token);
/* Binds a registered sink to a video track; native frames on the track are
 * then delivered to the sink. Returns 0 on success, negative on error
 * (null/unknown track, unknown token). */
LW_C_API int lw_video_track_bind_sink(lw_video_track_t* track,
                                      lw_video_sink_token token);
/* Unbinds any native sink from a track. Quiesces: blocks until an in-flight
 * on_frame returns, and emits on_eos to the previously-bound sink. Returns 0
 * on success, negative on error. */
LW_C_API int lw_video_track_unbind_sink(lw_video_track_t* track);
/* Per-decoded-frame callback (fires on the decoder delivery thread) reporting
 * the frame's pixel dimensions. For counting/telemetry only -- the frame
 * itself never crosses here (native frames flow through the sink registry).
 * Must return promptly and must not re-enter the track API (it runs on the
 * delivery path). Pass cb = NULL to clear. */
typedef void (*lw_frame_cb)(int width, int height, void* user);
LW_C_API int lw_video_track_set_frame_callback(lw_video_track_t* track,
                                               lw_frame_cb cb, void* user);
/* ---- Peer connection / transceiver / receiver ------------------------- */

/* Opaque handles produced by the calls below. */
typedef struct lw_pc lw_pc_t;
typedef struct lw_transceiver lw_transceiver_t;
typedef struct lw_receiver lw_receiver_t;
/* Media kind for a transceiver. */
typedef enum lw_media_type {
  LW_MEDIA_AUDIO = 0,
  LW_MEDIA_VIDEO = 1,
  LW_MEDIA_DATA = 2,
} lw_media_type;
/* Creates a peer connection on `factory` with a default configuration.
 * Returns NULL on failure; the handle owns one reference (lw_release). */
LW_C_API lw_pc_t* lw_pc_create(lw_factory_t* factory);
/* Closes a peer connection. The handle stays valid until lw_release. */
LW_C_API void lw_pc_close(lw_pc_t* pc);
/* Adds a transceiver of `media_type` (default direction). Returns NULL on
 * failure; the handle owns one reference. */
LW_C_API lw_transceiver_t* lw_pc_add_transceiver(lw_pc_t* pc,
                                                 lw_media_type media_type);
/* Returns the transceiver's receiver, or NULL. Handle owns one reference. */
LW_C_API lw_receiver_t* lw_transceiver_receiver(lw_transceiver_t* transceiver);
/* Returns the receiver's video track as a handle bindable with
 * lw_video_track_bind_sink, or NULL if the receiver has no video track. Handle
 * owns one reference. */
LW_C_API lw_video_track_t* lw_receiver_video_track(lw_receiver_t* receiver);
/* ---- Local video ------------------------------------------------------ */

/* Opaque handles for the send side. */
typedef struct lw_video_source lw_video_source_t;
/* Creates a video source that frames are pushed into, rather than one driven
 * by a capture device. `label` is a diagnostic name and may be NULL. Returns
 * NULL on failure; the handle owns one reference. */
LW_C_API lw_video_source_t* lw_factory_create_video_source(
    lw_factory_t* factory, const char* label);