third_party/lw_abi/lw_video_sink.h

/* Bumped when the C ABI surface changes incompatibly. Checked at load time
 * between the loader and libwebrtc.so, and against the decoder's shared
 * tree-revision pin. */
#define LW_ABI_VERSION 2
/* A decoded frame, described by reference (zero copy).
 *
 * `size` is sizeof(LwDmabufDescriptor) at the producer's compile time. A
 * consumer built against a different ABI minor MUST check `desc->size`
 * before reading any field beyond it: read min(sizeof(local), desc->size)
 * bytes, treat the remainder as absent. New fields only ever append.
 *
 * `num_planes` is attacker/bug-reachable via the bitstream path upstream;
 * consumers MUST validate `num_planes <= LW_MAX_PLANES` before indexing
 * planes[] rather than trusting it. */
typedef struct LwDmabufDescriptor {
  uint32_t size;     /* sizeof(LwDmabufDescriptor) */
  uint32_t fourcc;   /* DRM_FORMAT_* */
  uint64_t modifier; /* DRM_FORMAT_MOD_* (AFBC/UBWC/linear) */
  uint32_t width, height;
  uint32_t num_planes; /* 1..LW_MAX_PLANES; validate before indexing */
  LwDmabufPlane planes[LW_MAX_PLANES];
  int32_t acquire_fence_fd; /* -1 none; non-owning. Normally -1: DQBUF
                             * implies decode complete. Reserved for
                             * future GPU-producer paths. */
  uint32_t rotation;        /* 0/90/180/270; RTP CVO passthrough */
  int64_t rtp_timestamp_us; /* for A/V sync + latency HUD */
  uint64_t frame_seq;       /* monotonic within a session */
  uint32_t pool_generation; /* increments on pool reallocation; fd numbers
                             * are unique/stable only WITHIN a generation
                             * (kernel reuses fd values after pool close).
                             * Consumers key import caches on this. */
} LwDmabufDescriptor;
/* Invoked by the consumer exactly once when it is done with a taken frame
 * (scanout out-fence signaled / wl_buffer.release). Maps to producer
 * re-QBUF. release_ctx is the cookie the producer handed to on_frame. */
typedef void (*LwFrameRelease)(void* release_ctx);
/* The sink callback table. Registered with the sink registry and bound to a
 * track by token.
 *
 * `size` is sizeof(LwVideoSinkV1): forward-compat gate for appended fields.
 * When the function shape must change, introduce LwVideoSinkV2. */
typedef struct LwVideoSinkV1 {
  uint32_t size; /* sizeof(LwVideoSinkV1) */

  /* Called on the DECODER DELIVERY THREAD. MUST be non-blocking and
   * allocation-free (do an SPSC POD handoff of desc + release pair).
   *
   * Consumer either:
   *   - TAKES the frame: stores `desc` BY VALUE, stores
   * `release`+`release_ctx`, returns NONZERO. It now owns exactly one release
   * obligation and MUST call `release(release_ctx)` exactly once.
   *   - DECLINES: returns 0. The producer releases the frame immediately
   *     (latest-wins drop). Declining is THE drop mechanism — it keeps the
   *     decoder unblocked; decode never stalls on presentation. */
  int (*on_frame)(const LwDmabufDescriptor* desc, LwFrameRelease release,
                  void* release_ctx, void* user);

  /* Announces the format/geometry of the generation that is about to begin.
   * ALWAYS precedes the first on_frame of a new pool_generation.
   * NORMATIVE: on this call the consumer MUST invalidate all cached imports
   * from prior generations — fd numbers may be reused by the kernel across
   * pool reallocation and are NOT identity. `fmt_only` carries a valid
   * descriptor with no live fds to import. */
  void (*on_format)(const LwDmabufDescriptor* fmt_only, void* user);

  /* End of stream. No further on_frame for this binding. */
  void (*on_eos)(void* user);
} LwVideoSinkV1;