lib/src/ffi/lw_bindings.dart

// GENERATED — do not edit. Source: third_party/lw_abi (pinned LW_ABI_VERSION).
// ignore_for_file: type=lint, unused_field, unused_element, camel_case_types

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Raw FFI bindings to the libwebrtc flat C ABI (lw_*). Internal.
class LwBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  LwBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  LwBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Returns the ABI version the loaded library was built against. A caller
  /// compares this to its own LW_ABI_VERSION at load time.
  int lw_abi_version() {
    return _lw_abi_version();
  }

  late final _lw_abi_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('lw_abi_version');
  late final _lw_abi_version = _lw_abi_versionPtr.asFunction<int Function()>();

  /// Global init/teardown. lw_initialize returns nonzero on success and must be
  /// called once before creating a factory; lw_terminate is called after all
  /// handles have been released. Both are thread-safe.
  int lw_initialize() {
    return _lw_initialize();
  }

  late final _lw_initializePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>('lw_initialize');
  late final _lw_initialize = _lw_initializePtr.asFunction<int Function()>();

  void lw_terminate() {
    return _lw_terminate();
  }

  late final _lw_terminatePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('lw_terminate');
  late final _lw_terminate = _lw_terminatePtr.asFunction<void Function()>();

  /// Creates a peer-connection factory. Returns NULL on failure; the handle owns
  /// one reference (retire it with lw_release). Call lw_factory_initialize before
  /// using it.
  ffi.Pointer<lw_factory_t> lw_factory_create() {
    return _lw_factory_create();
  }

  late final _lw_factory_createPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<lw_factory_t> Function()>>(
          'lw_factory_create');
  late final _lw_factory_create =
      _lw_factory_createPtr.asFunction<ffi.Pointer<lw_factory_t> Function()>();

  /// Initializes a factory. Returns nonzero on success.
  int lw_factory_initialize(
    ffi.Pointer<lw_factory_t> factory1,
  ) {
    return _lw_factory_initialize(
      factory1,
    );
  }

  late final _lw_factory_initializePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<lw_factory_t>)>>(
          'lw_factory_initialize');
  late final _lw_factory_initialize = _lw_factory_initializePtr
      .asFunction<int Function(ffi.Pointer<lw_factory_t>)>();

  /// Retain/release any lw_* handle (all map to the shared RefCountInterface).
  /// One pair covers every handle type. Null handles are ignored. Handles may be
  /// released in any order: each keeps the factory it came from alive.
  void lw_retain(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _lw_retain(
      handle,
    );
  }

  late final _lw_retainPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'lw_retain');
  late final _lw_retain =
      _lw_retainPtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void lw_release(
    ffi.Pointer<ffi.Void> handle,
  ) {
    return _lw_release(
      handle,
    );
  }

  late final _lw_releasePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'lw_release');
  late final _lw_release =
      _lw_releasePtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  /// Frees a payload delivered to a callback below. Every `char*` a callback
  /// receives is owned by the callback, which passes it here once done. NULL is
  /// ignored.
  ///
  /// Data channel messages come this way too. They are length-delimited, since a
  /// binary message may contain zero bytes, but a NUL is appended past the length
  /// so a text message can also be read as a C string.
  void lw_string_free(
    ffi.Pointer<ffi.Char> s,
  ) {
    return _lw_string_free(
      s,
    );
  }

  late final _lw_string_freePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'lw_string_free');
  late final _lw_string_free =
      _lw_string_freePtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  /// Registers a native video sink. `sink` and `user` are caller-owned and MUST
  /// outlive the binding (they are referenced, not copied). Returns an
  /// unguessable token, or 0 on failure (null/invalid sink).
  int lw_video_sink_register(
    ffi.Pointer<LwVideoSinkV1> sink,
    ffi.Pointer<ffi.Void> user,
  ) {
    return _lw_video_sink_register(
      sink,
      user,
    );
  }

  late final _lw_video_sink_registerPtr = _lookup<
      ffi.NativeFunction<
          lw_video_sink_token Function(ffi.Pointer<LwVideoSinkV1>,
              ffi.Pointer<ffi.Void>)>>('lw_video_sink_register');
  late final _lw_video_sink_register = _lw_video_sink_registerPtr.asFunction<
      int Function(ffi.Pointer<LwVideoSinkV1>, ffi.Pointer<ffi.Void>)>();

  /// Unregisters a sink token. Returns 0 on success, negative if unknown. Does
  /// not unbind: unbind the track first (lw_video_track_unbind_sink).
  int lw_video_sink_unregister(
    int token,
  ) {
    return _lw_video_sink_unregister(
      token,
    );
  }

  late final _lw_video_sink_unregisterPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(lw_video_sink_token)>>(
          'lw_video_sink_unregister');
  late final _lw_video_sink_unregister =
      _lw_video_sink_unregisterPtr.asFunction<int Function(int)>();

  /// Binds a registered sink to a video track; native frames on the track are
  /// then delivered to the sink. Returns 0 on success, negative on error
  /// (null/unknown track, unknown token).
  int lw_video_track_bind_sink(
    ffi.Pointer<lw_video_track_t> track,
    int token,
  ) {
    return _lw_video_track_bind_sink(
      track,
      token,
    );
  }

  late final _lw_video_track_bind_sinkPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<lw_video_track_t>,
              lw_video_sink_token)>>('lw_video_track_bind_sink');
  late final _lw_video_track_bind_sink = _lw_video_track_bind_sinkPtr
      .asFunction<int Function(ffi.Pointer<lw_video_track_t>, int)>();

  /// Unbinds any native sink from a track. Quiesces: blocks until an in-flight
  /// on_frame returns, and emits on_eos to the previously-bound sink. Returns 0
  /// on success, negative on error.
  int lw_video_track_unbind_sink(
    ffi.Pointer<lw_video_track_t> track,
  ) {
    return _lw_video_track_unbind_sink(
      track,
    );
  }

  late final _lw_video_track_unbind_sinkPtr = _lookup<
          ffi.NativeFunction<ffi.Int Function(ffi.Pointer<lw_video_track_t>)>>(
      'lw_video_track_unbind_sink');
  late final _lw_video_track_unbind_sink = _lw_video_track_unbind_sinkPtr
      .asFunction<int Function(ffi.Pointer<lw_video_track_t>)>();

  int lw_video_track_set_frame_callback(
    ffi.Pointer<lw_video_track_t> track,
    lw_frame_cb cb,
    ffi.Pointer<ffi.Void> user,
  ) {
    return _lw_video_track_set_frame_callback(
      track,
      cb,
      user,
    );
  }

  late final _lw_video_track_set_frame_callbackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<lw_video_track_t>, lw_frame_cb,
              ffi.Pointer<ffi.Void>)>>('lw_video_track_set_frame_callback');
  late final _lw_video_track_set_frame_callback =
      _lw_video_track_set_frame_callbackPtr.asFunction<
          int Function(ffi.Pointer<lw_video_track_t>, lw_frame_cb,
              ffi.Pointer<ffi.Void>)>();

  /// Creates a peer connection on `factory` with a default configuration.
  /// Returns NULL on failure; the handle owns one reference (lw_release).
  ffi.Pointer<lw_pc_t> lw_pc_create(
    ffi.Pointer<lw_factory_t> factory1,
  ) {
    return _lw_pc_create(
      factory1,
    );
  }

  late final _lw_pc_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<lw_pc_t> Function(
              ffi.Pointer<lw_factory_t>)>>('lw_pc_create');
  late final _lw_pc_create = _lw_pc_createPtr
      .asFunction<ffi.Pointer<lw_pc_t> Function(ffi.Pointer<lw_factory_t>)>();

  /// Closes a peer connection. The handle stays valid until lw_release.
  void lw_pc_close(
    ffi.Pointer<lw_pc_t> pc,
  ) {
    return _lw_pc_close(
      pc,
    );
  }

  late final _lw_pc_closePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<lw_pc_t>)>>(
          'lw_pc_close');
  late final _lw_pc_close =
      _lw_pc_closePtr.asFunction<void Function(ffi.Pointer<lw_pc_t>)>();

  /// Adds a transceiver of `media_type` (default direction). Returns NULL on
  /// failure; the handle owns one reference.
  ffi.Pointer<lw_transceiver_t> lw_pc_add_transceiver(
    ffi.Pointer<lw_pc_t> pc,
    lw_media_type media_type,
  ) {
    return _lw_pc_add_transceiver(
      pc,
      media_type.value,
    );
  }

  late final _lw_pc_add_transceiverPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<lw_transceiver_t> Function(
              ffi.Pointer<lw_pc_t>, ffi.UnsignedInt)>>('lw_pc_add_transceiver');
  late final _lw_pc_add_transceiver = _lw_pc_add_transceiverPtr.asFunction<
      ffi.Pointer<lw_transceiver_t> Function(ffi.Pointer<lw_pc_t>, int)>();

  /// Returns the transceiver's receiver, or NULL. Handle owns one reference.
  ffi.Pointer<lw_receiver_t> lw_transceiver_receiver(
    ffi.Pointer<lw_transceiver_t> transceiver,
  ) {
    return _lw_transceiver_receiver(
      transceiver,
    );
  }

  late final _lw_transceiver_receiverPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<lw_receiver_t> Function(
              ffi.Pointer<lw_transceiver_t>)>>('lw_transceiver_receiver');
  late final _lw_transceiver_receiver = _lw_transceiver_receiverPtr.asFunction<
      ffi.Pointer<lw_receiver_t> Function(ffi.Pointer<lw_transceiver_t>)>();

  /// Returns the receiver's video track as a handle bindable with
  /// lw_video_track_bind_sink, or NULL if the receiver has no video track. Handle
  /// owns one reference.
  ffi.Pointer<lw_video_track_t> lw_receiver_video_track(
    ffi.Pointer<lw_receiver_t> receiver,
  ) {
    return _lw_receiver_video_track(
      receiver,
    );
  }

  late final _lw_receiver_video_trackPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<lw_video_track_t> Function(
              ffi.Pointer<lw_receiver_t>)>>('lw_receiver_video_track');
  late final _lw_receiver_video_track = _lw_receiver_video_trackPtr.asFunction<
      ffi.Pointer<lw_video_track_t> Function(ffi.Pointer<lw_receiver_t>)>();

  /// Creates a video source that frames are pushed into, rather than one driven
  /// by a capture device. `label` is a diagnostic name and may be NULL. Returns
  /// NULL on failure; the handle owns one reference.
  ffi.Pointer<lw_video_source_t> lw_factory_create_video_source(
    ffi.Pointer<lw_factory_t> factory1,
    ffi.Pointer<ffi.Char> label,
  ) {
    return _lw_factory_create_video_source(
      factory1,
      label,
    );
  }

  late final _lw_factory_create_video_sourcePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<lw_video_source_t> Function(ffi.Pointer<lw_factory_t>,
              ffi.Pointer<ffi.Char>)>>('lw_factory_create_video_source');
  late final _lw_factory_create_video_source =
      _lw_factory_create_video_sourcePtr.asFunction<
          ffi.Pointer<lw_video_source_t> Function(
              ffi.Pointer<lw_factory_t>, ffi.Pointer<ffi.Char>)>();
